--- a/index.html
+++ b/index.html
@@ -4,13 +4,31 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>AI Poem Generator</title>
+        <title>AI French Poem Generator</title>
         <link rel="stylesheet" href="src/style.css">
     </head>
 
     <body>
-        <h1>Welcome to the French Poem Generator </h1>
+        <header>
+            <h1>AI French Poem Generator </h1>
+        </header>
+        <main>
+            <form>
+                <input type="text" placeholder="Enter the topic of the French poem" autofocus required
+                    autocomplete="off" />
+                <input type="submit" />
+            </form>
+            <div>
+                The poem will go here
+                <br />
+                The poem will go here
+            </div>
+        </main>
+
+        <footer>This AI project was coded by Gloria Matope and is <a
+                href="https://github.com/gloriamatope/french-poem-generator"> open-sourced on Github</a> </footer>
         <script src="src/index.js"></script>
+
     </body>
 
 </html>
