--- a/index.html
+++ b/index.html
@@ -9,24 +9,29 @@
     </head>
 
     <body>
-        <header>
-            <h1>AI French Poem Generator </h1>
-        </header>
-        <main>
-            <form>
-                <input type="text" placeholder="Enter the topic of the French poem" autofocus required
-                    autocomplete="off" />
-                <input type="submit" />
-            </form>
-            <div>
-                The poem will go here
-                <br />
-                The poem will go here
-            </div>
-        </main>
+        <div class="container">
+            <header>
+                <h1>AI French Poem Generator </h1>
+            </header>
 
-        <footer>This AI project was coded by Gloria Matope and is <a
-                href="https://github.com/gloriamatope/french-poem-generator"> open-sourced on Github</a> </footer>
+            <main>
+                <form>
+                    <input type="text" placeholder="Enter the topic of the French poem" autofocus required
+                        autocomplete="off" class="instruction" />
+                    <input type="submit" class="submit-button" />
+                </form>
+                <div class="poem">
+                    The poem will go here
+                    <br />
+
+                    The poem will go here
+                </div>
+            </main>
+
+            <footer>The AI project was coded by <a href="https://github.com/gloriamatope">Gloria Matope</a> and is <a
+                    href="https://github.com/gloriamatope/french-poem-generator"> open-sourced on Github</a> and is <a
+                    href="https://glorie-ai-french-generator.netlify.app">hosted on Netifly</a> </footer>
+        </div>
         <script src="src/index.js"></script>
 
     </body>
