--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>AI French Poem Generator</title>
         <link rel="stylesheet" href="src/style.css">
+        <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     </head>
 
     <body>
@@ -15,16 +16,13 @@
             </header>
 
             <main>
-                <form>
+                <form id="poem-generator-form">
                     <input type="text" placeholder="Enter the topic of the French poem" autofocus required
                         autocomplete="off" class="instruction" />
                     <input type="submit" class="submit-button" />
                 </form>
-                <div class="poem">
-                    The poem will go here
-                    <br />
+                <div class="poem" id="poem">
 
-                    The poem will go here
                 </div>
             </main>
 
