--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>AI French Poem Generator</title>
         <link rel="stylesheet" href="src/style.css">
         <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     </head>
 
     <body>
@@ -18,7 +19,7 @@
             <main>
                 <form id="poem-generator-form">
                     <input type="text" placeholder="Enter the topic of the French poem" autofocus required
-                        autocomplete="off" class="instruction" />
+                        autocomplete="off" class="instruction" id="user-instructions" />
                     <input type="submit" class="submit-button" />
                 </form>
                 <div class="poem" id="poem">
