--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
             </header>
 
             <main>
-                <form id="poem-generator-form">
-                    <input type="text" placeholder="Enter the topic of the French poem" autofocus required
-                        autocomplete="off" class="instruction" id="user-instructions" />
-                    <input type="submit" class="submit-button" />
-                </form>
-                <div class="poem" id="poem">
+                <div class="form-container">
+                    <form id="poem-generator-form">
+                        <input type="text" placeholder="Enter the topic of the French poem" autofocus required
+                            autocomplete="off" class="instruction" id="user-instructions" />
+                        <input type="submit" class="submit-button" />
+                    </form>
+                    <small>i.e: Flower, Paris or Cheese</small>
 
                 </div>
+
+                <div class="poem hidden" id="poem"></div>
             </main>
 
             <footer>The AI project was coded by <a href="https://github.com/gloriamatope">Gloria Matope</a> and is <a
